Rewritten to support java 8.